# iop-snark-library

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  go.mod  index.js  package-lock.json  package.json  test.js  test_ffi.py  vckpg.json
.github/workflows/: prebuilds.yml
cmake/: Findsodium.cmake
depends/: CMakeLists.txt
ffi/: addon.cpp  libiop_ffi.cpp  libiop_ffi.h  main_test.cpp
ffi_cgo/: CMakeLists.txt  zk_c_api.cpp  zk_c_api.h
go_zk/: go.mod  main.go
go_zk/cmd/demo/: main.go
go_zk/cmd/rpc_server/: main.go
go_zk/rpc/: service.go
go_zk/server/: main.go
go_zk/zk/: zk.go
libiop/: CMakeLists.txt
libiop/algebra/: exponentiation.hpp  exponentiation.tcc  fft.hpp  fft.tcc  lagrange.hpp  lagrange.tcc  utils.cpp  utils.hpp  utils.tcc
libiop/algebra/field_subset/: basis_utils.hpp  basis_utils.tcc  field_subset.hpp  field_subset.tcc  subgroup.hpp  subgroup.tcc  subspace.hpp  subspace.tcc
libiop/algebra/polynomials/: bivariate_lagrange_polynomial.hpp  bivariate_lagrange_polynomial.tcc  lagrange_polynomial.hpp  lagrange_polynomial.tcc  linearized_polynomial.hpp  linearized_polynomial.tcc  piecewise_polynomial.hpp  polynomial.hpp  polynomial.tcc  vanishing_polynomial.hpp  vanishing_polynomial.tcc
libiop/algebra/trace_embedding/: additive_successor_ordering.tcc  bivariate_embedding.hpp  bivariate_embedding.tcc  multiplicative_successor_ordering.tcc  successor_ordering.hpp  trace_embedding.hpp  trace_embedding.tcc  wrapper_successor_ordering.tcc
libiop/bcs/: README.md  bcs_common.hpp  bcs_common.tcc  bcs_indexer.hpp  bcs_indexer.tcc  bcs_prover.hpp  bcs_prover.tcc  bcs_verifier.hpp  bcs_verifier.tcc  common_bcs_parameters.hpp  common_bcs_parameters.tcc  merkle_tree.hpp  merkle_tree.tcc  pow.hpp  pow.tcc
libiop/bcs/hashing/: README.md  algebraic_sponge.hpp  algebraic_sponge.tcc  blake2b.cpp  blake2b.hpp  blake2b.tcc  dummy_algebraic_hash.hpp  dummy_algebraic_hash.tcc  dummy_algebraic_sponge.hpp  generate_MDS.sage  hash_enum.hpp  hash_enum.tcc  hashing.hpp  poseidon.hpp  poseidon.md  poseidon.tcc  rescue.hpp
libiop/benchmarks/: benchmark_alt_bn128.cpp  benchmark_edwards.cpp  benchmark_fft.cpp  benchmark_gf128.cpp  benchmark_gf192.cpp  benchmark_gf256.cpp  benchmark_gf64.cpp  benchmark_hashes.cpp  benchmark_lagrange.cpp  benchmark_polynomials.cpp  benchmark_sumcheck.cpp  benchmark_vector_op.cpp
libiop/common/: common.cpp  common.hpp  cpp17_bits.hpp
libiop/iop/: iop.hpp  iop.tcc  oracles.hpp
libiop/iop/utilities/: batching.cpp  batching.hpp  batching.tcc  query_positions.hpp  query_positions.tcc
libiop/profiling/: boost_profile.cpp  instrument_algebra.cpp  instrument_aurora_snark.cpp  instrument_fractal_snark.cpp  instrument_fri_snark.cpp  instrument_ligero_snark.cpp
libiop/protocols/: aurora_iop.hpp  aurora_iop.tcc  fractal_hiop.hpp  fractal_hiop.tcc  fri_iop.hpp  fri_iop.tcc  ligero_iop.hpp  ligero_iop.tcc
libiop/protocols/encoded/: README.md  dummy_protocol.hpp  dummy_protocol.tcc
libiop/protocols/encoded/common/: boundary_constraint.hpp  boundary_constraint.tcc  random_linear_combination.hpp  random_linear_combination.tcc  rational_linear_combination.hpp  rational_linear_combination.tcc  rowcheck.hpp  rowcheck.tcc
libiop/protocols/encoded/ligero/: interleaved_lincheck_et.hpp  interleaved_lincheck_et.tcc  interleaved_lincheck_ot.hpp  interleaved_lincheck_ot.tcc  interleaved_rowcheck.hpp  interleaved_rowcheck.tcc  ligero.hpp  ligero.tcc
libiop/protocols/encoded/lincheck/: basic_lincheck.hpp  basic_lincheck.tcc  basic_lincheck_aux.hpp  basic_lincheck_aux.tcc  common.hpp  common.tcc  holographic_lincheck.hpp  holographic_lincheck.tcc  holographic_lincheck_aux.hpp  holographic_lincheck_aux.tcc  multi_lincheck.md
libiop/protocols/encoded/r1cs_rs_iop/: README.md  fractal_indexer.hpp  fractal_indexer.tcc  r1cs_rs_iop.hpp  r1cs_rs_iop.tcc
libiop/protocols/encoded/sumcheck/: rational_sumcheck.hpp  rational_sumcheck.tcc  sumcheck.hpp  sumcheck.tcc  sumcheck_aux.hpp  sumcheck_aux.tcc
libiop/protocols/ldt/: README.md  ldt_reducer.cpp  ldt_reducer.hpp  ldt_reducer.tcc  ldt_reducer_aux.hpp  ldt_reducer_aux.tcc  multi_ldt_base.hpp
libiop/relations/: r1cs.hpp  r1cs.tcc  sparse_matrix.cpp  sparse_matrix.hpp  sparse_matrix.tcc  succinct_matrix.hpp  succinct_matrix.tcc  variable.hpp  variable.tcc
libiop/relations/examples/: r1cs_examples.hpp  r1cs_examples.tcc
libiop/relations/succinct_matrices/: identity.hpp  identity.tcc
libiop/snark/: aurora_snark.hpp  aurora_snark.tcc  fractal_snark.hpp  fractal_snark.tcc  fri_snark.hpp  fri_snark.tcc  ligero_snark.hpp  ligero_snark.tcc
libiop/tests/algebra/: test_algebra_utils.cpp  test_bivariate_embedding.cpp  test_exponentiation.cpp  test_fft.cpp  test_lagrange.cpp  test_lagrange_polynomial.cpp  test_linearized_polynomial.cpp  test_successor_ordering.cpp  test_vanishing_polynomial.cpp
libiop/tests/bcs/: dummy_bcs_protocol.hpp  dummy_bcs_protocol.tcc  test_bcs_transformation.cpp  test_merkle_tree.cpp
libiop/tests/custom_test/: custom_test.cpp
libiop/tests/iop/: test_iop.cpp  test_iop_query_position.cpp
libiop/tests/protocols/: test_aurora_protocol.cpp  test_basic_lincheck.cpp  test_boundary_constraint.cpp  test_direct_ldt.cpp  test_fractal_indexer.cpp  test_fractal_protocol.cpp  test_fri.cpp  test_fri_aux.cpp  test_fri_optimizer.cpp  test_holographic_lincheck.cpp  test_ldt_reducer.cpp  test_ligero_interleaved_lincheck_et.cpp  test_ligero_interleaved_lincheck_ot.cpp  test_ligero_interleaved_rowcheck.cpp  test_ligero_protocol.cpp  test_r1cs_to_lincheck_reduction.cpp  test_rational_linear_combination.cpp  test_rational_sumcheck.cpp  test_rowcheck.cpp  test_sumcheck.cpp  utilities.cpp
libiop/tests/relations/: test_identity_matrices.cpp  test_r1cs.cpp
libiop/tests/snark/: test_aurora_snark.cpp  test_fractal_snark.cpp  test_ligero_snark.cpp  test_linking.cpp  test_poseidon.cpp  test_pow.cpp  test_serialization.cpp
libs/: libiop_ffi.exp
wasm_deps/lib/: libsodium.la  libsodium.so.28.0.0
wasm_deps/lib/pkgconfig/: libsodium.pc
(+14 files in other folders)
